--- a/bbm92_cw/example/test_secure_key_rates.ipynb
+++ b/bbm92_cw/example/test_secure_key_rates.ipynb
@@ -87,7 +87,9 @@
     "ax2.tick_params(axis='y', colors='red')\n",
     "ax.spines['left'].set_color('blue')\n",
     "ax.yaxis.label.set_color('blue')\n",
-    "ax.tick_params(axis='y', colors='blue')"
+    "ax.tick_params(axis='y', colors='blue')\n",
+    "\n",
+    "fig.savefig('figures/example_overpass.pdf',bbox_inches='tight')"
    ]
   },
   {
